--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap</title>
+    <title>¡BOOM!</title>
 
     <link rel="stylesheet" href="./bootstrap-5.3.3-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 
 </head>
 <body>
   <header class="border container d-flex justify-content-between align-items-center">
-    <section class="col-2 col-sm-4 col-md-6 col-lg-8 col-xl-10 col-xxl-12"> <a href="#" class="navbar-brand">
-        <img src="https://imgs.search.brave.com/sBj-prttejdJwcNBIUutT4_Q_XPSZd5lwIfkXoN6SEg/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9saXN0/Y2FyYnJhbmRzLmNv/bS93cC1jb250ZW50/L3VwbG9hZHMvMjAy/My8wNi9Mb2dvLVBv/cnNjaGUtNjAweDMz/Ny5wbmc" alt="" width="180" height="100">
+    <section> <a href="#" class="navbar-brand">
+        <img src="" alt="" height="150">
       </a>
     </section>
-    <h1>PORSCHE</h1>
+    <h1>WELCOME TO BOOM!</h1>
     <nav class="col-2 col-sm-4 col-md-6 col-lg-4 col-xl-2 col-xxl-2 d-flex align-items-center justify-content-end"> <ul class="d-flex align-items-center">
         <li class="list-unstyled m-1">Inicio</li>
         <li class="list-unstyled m-1">Nosotros</li>
@@ -26,14 +27,14 @@
   <main class="border container">
   
     <!-- intento de  galeria  -->
-    <section class="border text-center col-2 col-sm-4 col-md-6 col-lg-8 col-xl-10 col-xxl-12">
-        Galeria
+    <section class="border text-center navbar-brand ">
+        <article class="galeria">Galeria</article> 
     </section>
     <!-- seccciones de galeria  -->
-        <section class="d-flex col-2 col-sm-4 col-md-6 col-lg-8 col-xl-10 col-xxl-12">
+        <section class="d-flex gap-5 galeria">
             
             <section class="card" style="width: 18rem;">
-                <img src="./img/Fotografia.jfif" class="card-img-top" alt="..." width="100" height="300" >
+                <img src="./img/𝕭𝖊𝖎𝖐𝖊𝖗 𝖆𝖑𝖊𝖝𝖆𝖓𝖉𝖊𝖗.jpeg" class="card-img-top" alt="..." width="100" height="300" >
                 <article class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -41,7 +42,7 @@
                 </section>
 
                 <section class="card" style="width: 18rem;">
-                <img src="./img/Fotografia.jfif" class="card-img-top" alt="..." width="100" height="300" >
+                <img src="./img/descarga.jpeg" class="card-img-top" alt="..." width="100" height="300" >
                 <article class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -49,7 +50,7 @@
                 </section>
 
                 <section class="card" style="width: 18rem;">
-                    <img src="./img/Fotografia.jfif" class="card-img-top" alt="..." width="100" height="300" >
+                    <img src="./img/🔥.jfif" class="card-img-top" alt="..." width="100" height="300" >
                     <article class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -57,7 +58,7 @@
                     </section>
 
                     <section class="card" style="width: 18rem;">
-                        <img src="./img/Fotografia.jfif" class="card-img-top" alt="..." width="100" height="300" >
+                        <img src="./img/descarga (2).jpeg" class="card-img-top" alt="..." width="100" height="300" >
                         <article class="card-body">
                                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -67,44 +68,45 @@
 
      <!--  intento de testimonios -->
      <section class="border text-center">
-        Testimonios
+        <article class="galeria">Testimonios</article>
      </section>
         <!--  secciones de testimonios -->
 
-     <section>
+     <section class="galeria">
         <div class="card-group">
             <div class="card">
               <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <img src="./img/🔥.jfif" class="card-img-top rounded-circle" alt="...">
+                <p class="card-text">This is a wider card with supporting text below as aadditional content.</p>
+                <img src="./img/💎.jpeg" class="card-img-top rounded-circle" alt="...">
               </div>
             </div>
 
+            
+
             <div class="card">
                 <div class="card-body">
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content</p>
-                  <img src="./img/🔥.jfif" class="card-img-top rounded-circle" alt="..." >
+                  <img src="./img/descarga (1).jpeg" class="card-img-top rounded-circle" alt="..." >
                 </div>
               </div>
 
             <div class="card">
                 <div class="card-body">
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content</p>
-                  <img src="./img/🔥.jfif" class="card-img-top rounded-circle" alt="...">
+                  <img src="./img/8d90fe5182b89b91f1973f6016b19d64.jpg" class="card-img-top rounded-circle" alt="...">
                 </div>
               </div>
-
             <div class="card"> 
               <div class="card-body">
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <img src="./img/🔥.jfif" class="card-img-top rounded-circle" alt="...">
+                <img src="./img/Pixel art by._artist _ Instagram" class="card-img-top rounded-circle" alt="...">
               </div>
             </div>
 
             <!-- NOTICIA -->
             <div class="card ">
-              <div class="card-body border">
-                <img src="./img/Tree on cliff.jfif" class="card-img-top" alt="...">
+              <div class="card-body ">
+                <img src="./img/Breaking news.png" class="card-img-top" alt="...">
               </div>
             </div>
           </div>
